items appear in shoppingcart where they can get deleted after use

--- a/src/card.css
+++ b/src/card.css
@@ -4,3 +4,9 @@
 .closed {
   display: none;
 }
+.box {
+  width: 100px;
+  height: 100px;
+  border: 1px solid black;
+  background-color: rgb(197, 142, 249);
+}
