--- a/src/card.css
+++ b/src/card.css
@@ -9,9 +9,10 @@
   width: 100px;
   height: 100px;
   border: 1px solid black;
-  border-radius: 100%;
+  border-radius: 50%;
   text-align: center;
   vertical-align: middle;
   line-height: 90px;
   background-color: papayawhip;
+  margin: 5px;
 }
